--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
-<head>
+<!-- <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script defer src="theme.js"></script>
   <link rel="stylesheet" href="style.css" />
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet"/>
 </head>
-<!-- soukromý test -->
-<body>
+<body> -->
   <nav class="navbar">
     <ul class="navbar-nav">
       <li class="logo">
@@ -41,7 +37,7 @@
       </li>
 
       <li class="nav-item">
-        <a href="#" class="nav-link">
+        <a href="../max-test/charts.php" class="nav-link">
           <svg
             aria-hidden="true"
             focusable="false"
@@ -65,12 +61,12 @@
               ></path>
             </g>
           </svg>
-          <span class="link-text">Cats</span>
+          <span class="link-text">Služby</span>
         </a>
       </li>
 
       <li class="nav-item">
-        <a href="#" class="nav-link">
+        <a href="../max-test/home.php" class="nav-link">
           <svg
             aria-hidden="true"
             focusable="false"
@@ -94,7 +90,7 @@
               ></path>
             </g>
           </svg>
-          <span class="link-text">Aliens</span>
+          <span class="link-text">Události</span>
         </a>
       </li>
 
@@ -123,7 +119,7 @@
               ></path>
             </g>
           </svg>
-          <span class="link-text">Space</span>
+          <span class="link-text">Dokumenty</span>
         </a>
       </li>
 
@@ -238,7 +234,7 @@
       </li>
     </ul>
   </nav>
-
+<!-- 
   <main>
     <h1>CSS is Cool</h1>
 
@@ -340,4 +336,4 @@
       brooklyn.
     </p>
   </main>
-</body>
+</body> -->
